make the Dockerfile reusable with arguments
Signed-off-by: Raymond Augé <raymond.auge@liferay.com>